Uploaded image for project: 'Thrift'
  1. Thrift
  2. THRIFT-417

BufferedTransport can enter an infinite loop

VotersWatch issueWatchersLinkCloneUpdate Comment AuthorReplace String in CommentUpdate Comment VisibilityDelete Comments
    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Blocker
    • Resolution: Fixed
    • None
    • 0.1
    • Ruby - Library
    • None
    • Patch Available

    Description

      I'm not 100% sure of the circumstances yet, but it looks like if you ask BufferedTransport to read 0 bytes, you will enter an infinite loop. This may be particularly related to using the BinaryProtocolAccelerated protocol.

      Attachments

        1. thrift-417.patch
          7 kB
          Bryan Duxbury
        2. thrift-417-v2.patch
          8 kB
          Bryan Duxbury

        Activity

          This comment will be Viewable by All Users Viewable by All Users
          Cancel

          People

            bryanduxbury Bryan Duxbury
            bryanduxbury Bryan Duxbury
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Slack

                Issue deployment